Deleted action box

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         </div>
     </div>
     <div class="content-three">
-        <p class="who">Visión</p>
-        <p class="quote">"Dominar el negocio de realizar recetas y ofrecer ingredientes que son parte de las comidas peruanas del día a día, a través de la satisfacción del cliente".</p>
         <p class="who">Misión</p>
         <p class="quote">"Somos una empresa que brinda un servicio a la sociedad facilitándole tiempo y dinero brindándole el servicio de delivery  de ingredientes naturales, sanos y frescos a domicilio."</p>
-    </div>
-    <div class="content-four">
+        <p class="who">Visión</p>
+        <p class="quote">"Dominar el negocio de realizar recetas y ofrecer ingredientes que son parte de las comidas peruanas del día a día, a través de la satisfacción del cliente".</p>
+        </div>
+  <!--  <div class="content-four">
         <div class="action-box">
             <div class="left-side">
                 <h3>Call to action! It's time!</h3>
@@ -61,7 +61,7 @@
             </div>
             <button class="right-side">Sign up</button>
         </div>
-    </div>
+    </div>-->
     <div class="footer">Copyright© ListoEnQuince</div>
 </body>
 </html>
